# deploid

./: Cargo.toml  LICENSE  README.md  makefile
deploid/: Cargo.toml  build.rs
deploid/src/: main.rs
example/: LICENSE  README.md  main.rhai
installer/: Cargo.toml
installer/src/: main.rs
installer_pack/: main.rhai
scaffolder/: Cargo.toml
scaffolder/src/: main.rs
template/: Cargo.toml
template/src/: main.rs
