[package]
name = "template"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
wincode = { version = "0.4.5", features = ["derive"] }
zip = "8.2.0"
anyhow = "1.0.102"
rhai = "1.24.0"
smartstring = "1.0.1"
tui-input = { version = "0.15.0", features = ["ratatui", "crossterm"] }
walkdir = "2.5.0"
rand = "0.10.0"
log = "0.4.29"
simplelog = "0.12.2"

[build-dependencies]
winres = "0.1.12"
